# APIcultura

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
apicultura/: app.py  main.py
apicultura/core/: database.py  dependencies.py  exceptions.py  security.py  settings.py
apicultura/core/models/: __init__.py  base.py  task_models.py  user.py  user_model.py
apicultura/core/schemas/: task_schema.py  token_schema.py  user.py  user_schema.py
apicultura/core/security/: token.py  user.py
apicultura/migrations/: env.py
apicultura/migrations/versions/: 1f599da59d38_create_tasks_table.py  2a28aad461a5_create_tasks_table.py  3049cfa156a6_create_tabler_users.py  46b970baf4aa_create_tasks_table.py  6633b9148ace_create_tasks_table.py  6fa9d5e1e299_create_tasks_table.py  756053f5ae96_create_tasks_table.py  75bf6c5d142c_create_tasks_table.py  7d32891872e9_create_tasks_table.py  a241378c0fd3_create_tasks_table.py  c067c12b8d91_create_tasks_table.py  cd6ff3711935_create_tasks_table.py
apicultura/tests/: conftest.py  test_app.py  test_security.py
apicultura/tests/factories/: task_factory.py  user_factory.py
apicultura/tests/v1/: test_task.py  test_user.py
apicultura/v1/: main.py
apicultura/v1/endpoints/: authentication_endpoints.py  task_endpoints.py  token_endpoints.py  user_endpoints.py
apicultura/v1/repo/: TaskRepository.py  UserRepository.py
apicultura/v1/services/: task_services.py  token_service.py  user_services.py
tests/: test_app.py
